# rules_dhall

./: .bazelrc  .gitignore  MODULE.bazel  README.md  defs.bzl  extensions.bzl
examples/abcd/: BUILD
examples/configmap/: BUILD
examples/extra_data/: BUILD
examples/http_import/: BUILD  false.dhall
examples/k8s/: BUILD
examples/optionals/: BUILD
rules/: BUILD  dhall-freeze.sh  dhall-library.sh  dhall-output.sh  dhall_freeze.bzl  dhall_library.bzl  dhall_output.bzl
